# image-denoising

./: .gitignore  README.md  pyproject.toml
configs/: example_commands.md
notebooks/: restormer_pretrained_prerun.ipynb
scripts/: download_restormer_assets.py
src/microct_denoising/: __init__.py  checkpoints.py  constants.py  data.py  inference.py  metrics.py  predict.py  train.py
src/microct_denoising/models/: __init__.py  redcnn.py  restormer.py
